src/web/static/style.css
body {
    display: flex;
    justify-content: center;
    height: 100vh;
    font-size: 24px;
    background-color: #F0F0F0;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    overflow: scroll;
    padding-bottom: 30px;
}

footer {
  text-align: center;
  font-size: 12px;
  color: #888;
  position: absolute;
  bottom: 20px;
  left: 0;
  right: 0;
}

.my-container {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    border: 1px solid #ccc;
    border-radius: 10px;
    background-color: white;
    max-width: 1200px;
    margin: auto;
    height: 85%;
    align-items: flex-start;
}

.form-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: baseline;
    margin-right: 10px;
    position: sticky;
    top: 10%;
    overflow: auto;
    height: 100%;
    padding: 3px;
}

.table-container {
    flex: 3;
    height: 100%;
    overflow-y: auto;
    overflow-x: hidden;
    width: max-content;
}

table {
    width: 100%;
    table-layout: fixed;
}

th, td {
    padding: 15px;
    border-bottom: 1px solid #ddd;
    word-wrap: break-word;
}

th {
    position: sticky;
    font-weight: bold;
    top: 0;
    z-index: 1;
}

.table-code, .table-name, .table-class {
    background-color: #eaeaea;
}

.table-code {
    width: 85px;
}

.table-name {
    width: 100px;
}

.table-class {
    width: 45px;
}

.table-round {
    width: 65px;
    background-color: #FFC965;
    text-align: center;
}

input[type=text], select {
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

input[type=submit] {
    width: 100%;
    background-color: #4CAF50;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

input[type=submit]:hover {
    background-color: #45a049;
}

.search-bar-container {
  position: relative;
  display: inline-block;
  margin-bottom: 1rem;
}

.help-icon {
  position: absolute;
  right: 5px;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
}

.btn-secondary.active {
  background-color: #007bff !important;
  color: #ffffff !important;
  border-color: #007bff !important;
}

.less-demand {
    background-color: lightgreen;
}

.more-demand {
    background-color: lightcoral;
}

.equal-demand {
    background-color: white;
}

.no-data {
    background-color: lightgrey;
}

.hidden {
  display: none;
}

.spinner {
  border: 4px solid rgba(0, 0, 0, 0.1);
  border-left-color: #333;
  border-radius: 50%;
  width: 20px;
  height: 20px;
  animation: spinner-rotation 0.8s infinite linear;
  margin: 10px auto;
}

@keyframes spinner-rotation {
  0% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
  }
}

.form-url-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    position: sticky;
    top: 10%;
}

.url-container {
  background-color: #4CAF50;
  padding: 20px;
  margin-top: 20px;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.url-link {
  color: #fff;
  text-decoration: none;
  font-size: 1.2em;
  word-break: break-all;
}

